--- a/OneDrive/Escritorio/CronoDateTimer3.0/Estilos/alarma.css
+++ b/OneDrive/Escritorio/CronoDateTimer3.0/Estilos/alarma.css
@@ -1,3 +1,4 @@
+/*Estilos de el contenedor de la Alarma */
 .contenedor{
     min-height: 500px;
     position: absolute;
@@ -7,6 +8,8 @@
     border-bottom: 4px solid #EC2C71 ;
 }
 
+
+/*Estilos de los botones (Inicio, reinicio y Ajustes) de la Alarma */
 #startAlarm{
     background-color: #43D688;
     border: none;
@@ -35,6 +38,7 @@
     background-color:#6c1334 ;
 }
 
+/* Estilos de el contenedor de los ajustes de la alarma */
 .contenedorSetting{
     position: absolute;
     top: 95%;
@@ -44,7 +48,7 @@
     z-index: 20;
 }
 
-
+/* Estilos para el input del mensaje de los ajuestes de la alarma y el temporizador */
 .form-control{
     width: 200px;
     margin-right: 15px;
@@ -57,6 +61,7 @@
     font-size: 18px;
 }
 
+/*  Estilos para los sonidos de la alarma y el temporizador */
 .dropdown:hover,
 .dropdown:active,
 .dropdown:focus{
@@ -80,16 +85,21 @@
     color:#b2b2b2 ;
 
 }
+
+/* Estilos para activar la visivibilidad de los sonidos y mensajes de la alarma y el temporizador */
 .activeSound, .activeMessage{
     opacity: 0.5;
 }
 
+/*Movilidad de los contendedores de los ajustes de la alarma y el temporizador */
 .activeSetting{
     transform: translateY(-500px);
 }
 .activeSetting-info{
     transform: translateY(300px);
 }
+
+/*Estilos para el contenedor de la informacion de la alarma y el temporizador */
 .container-info{
     position: absolute;
     top: 90%;
